k8s/codeprojectai/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeproject-ai
  namespace: ai
  labels:
    app: codeproject-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codeproject-ai
  template:
    metadata:
      labels:
        app: codeproject-ai
    spec:
      tolerations:
      - key: "nvidia.com/gpu"
        operator: "Equal"
        value: "true"
#      affinity:
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#            - matchExpressions:
#              - key: gpu
#                operator: In
#                values:
#                  - "true"
      containers:
      - name: codeproject-ai
        image: codeproject/ai-server:2.9.7
        ports:
        - containerPort: 32168
#        resources:
#          limits:
#            nvidia.com/gpu: 1
